fix layout shift and conflicting files

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -63,6 +63,8 @@
   --transition-regular: 0.4s;
   --transition-slow: 0.6s;
 
+  --scrollbar-width: 0px;
+
   @include shades.shades-dangerous;
   @include light.mode;
 
